# 3D-Reconstruction

./: .gitignore  DEV_SPEC.md  LICENSE  README.md  start.bat  start_backend.bat  start_frontend.bat  基于三维高斯泼溅与辐射场技术的高性能三维重建系统设计与实现研究报告.md
backend/: pyproject.toml  requirements.lock.txt
backend/app/: __init__.py  config.py  main.py  schemas.py
backend/app/api/: datasets.py  fs.py  import_model.py  jobs.py  models.py  uploads.py
backend/app/core/: __init__.py  events.py  registry.py  scheduler.py
backend/app/services/: __init__.py  compressor.py  sfm_service.py  trainer_service.py
backend/app/utils/: __init__.py  file_handler.py  proc.py
backend/train/: __init__.py  colmap_io.py  train_gsplat.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  types.ts
frontend/src/api/: client.ts  sse.ts
frontend/src/components/: ImportButton.tsx  JobProgress.tsx  Layout.tsx  ModelCard.tsx  PathPicker.tsx  SplatViewer.tsx  UploadZone.tsx
frontend/src/pages/: ComparePage.tsx  GalleryPage.tsx  ReconstructPage.tsx  ViewerPage.tsx
frontend/src/store/: useStore.ts
frontend/src/types/: gaussian-splats-3d.d.ts
frontend/src/utils/: format.ts
scripts/: download_sample.py
